[package]
name = "spectrum"
version = "0.1.0"
authors = ["Arseniy Kucher <orsen.kucher@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = { version = "0.2.63", features = ["serde-serialize"] }
serde = { version = "1.0.117", features = ["derive"] }

plotters = "0.3.0"
plotters-canvas = "0.3.0"

js-sys = "0.3.45"
web-sys = { version = "0.3.45", features = [
  "HtmlCanvasElement",
  "FileReader",
  "Blob",
  "DragEvent",
  "DataTransfer",
  "FileList",
  "File",
  "Event",
] }

wee_alloc = { version = "0.4.5", optional = true }

log = "0.4.11"
console_log = { version = "0.2", features = ["color"] }
console_error_panic_hook = { version = "0.1.6", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# optimize for small code size
opt-level = "s"


[package.metadata.wasm-pack.profile.release]
# Optimize for size: -Os
# Optimize aggressively for size: -Oz
# Optimize for speed: -O
# Optimize aggressively for speed: -O3
# Trun optimizations off: = false
wasm-opt = ["-O3", "--enable-mutable-globals"]
